Fix padding pulseaudio module

--- a/.dotfiles/.config/polybar/modules/pulseaudio.ini
+++ b/.dotfiles/.config/polybar/modules/pulseaudio.ini
@@ -30,6 +30,7 @@ format-volume = <ramp-volume> <label-volume>
 ;   %decibels%
 label-volume = %percentage%%
 label-volume-background = ${color.bg-alt}
+label-volume-padding = 1
 
 ; Available tokens:
 ;   %percentage% (default)
